--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     if (codeParameter !== '') {
         // Redirect to localhost with the "code" parameter
-        window.location.href = 'http://localhost:5173/?code=' + codeParameter;
+        window.location.href = 'http://localhost:5173/login/?code=' + codeParameter;
     }
 
     // You can add more JavaScript code or messages here if needed
