--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         name = name.replace(/[[]/, '\\[').replace(/[\]]/, '\\]');
         var regex = new RegExp('[\\?&]' + name + '=([^&#]*)');
         var results = regex.exec(location.search);
-        return results === null ? '' : decodeURIComponent(results[1].replace(/\+/g, ' '));
+        return results === null ? '' : encodeURIComponent(results[1].replace(/\+/g, ' '));
     }
 
     // Check if the "code" parameter is present in the URL
