--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
     if (code !== '') {
         // Set the text content of the H2 element to the current URL
+        imageElement.src = '/icon.png'
         if(env === 'production'){
           window.location.href = 'http://localhost:3000/redirect/' + code + '/' + expiry;
         }else{
